--- a/app/assets/stylesheets/icons.css.scss
+++ b/app/assets/stylesheets/icons.css.scss
@@ -56,6 +56,7 @@
   }
   &.pie-icon { background-image: url("pie-light-24.png"); }
   &.topic-icon { background-image:url('/assets/topic-24.png'); }
+  &.home-icon { background-image:url('/assets/home-24.png'); }
 }
 
 .header-bar-icon{
