--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -7,6 +7,9 @@
             %li.nav-item#logo-home
               %a.nav-logo-link{:href => "/"}
                 = image_tag("top-bar-loomio.png", :alt => "Loomio")
+            %li.nav-item#home
+              %a.nav-link{:href => "/"}
+                %span.header-bar-icon.nav-item-icon.large-icon.home-icon
             = render 'notifications_dropdown'
             = render 'application/groups_dropdown'
             = render 'user_dropdown'
