--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -80,6 +80,14 @@ ul, ol, li {
   text-align: left;
 }
 
+.box-lt-blue { background-color: #E7F5F8; }
+.box-lime { background-color: #E9F1D9; }
+.box-yellow { background-color: #FCF7D7; }
+.box-orange { background-color: #FEEED5; }
+.btn-lt-blue { background-color: #80C7E3; }
+.btn-lime { background-color: #8EC840; }
+.btn-yellow { background-color: #EFD830; }
+.btn-orange { background-color: #FAA82A; }
 .btn-grey { color: $mid-grey; }
 
 .cf {
