--- a/app/views/groups/_options_dropdown.html.haml
+++ b/app/views/groups/_options_dropdown.html.haml
@@ -9,6 +9,8 @@
       %ul.dropdown-menu.pull-right
         - if can_edit
           %li= link_to t(:edit_group_settings), edit_group_path(group)
+        - if can? :view_payment_details, group and group.has_subscription_plan?
+          %li= link_to t(:payment_details_link), view_payment_details_group_path
         - if can_leave
           - membership = current_user.group_membership(group)
           %li= link_to t(:leave_group), "#", 'data-title' => t(:leave_group), 'data-body' => t(:confirm_leave_group, which_group: group.name), 'data-confirm-path' => group_membership_path(group, membership), 'data-method-type' => 'delete', class: 'confirm-dialog', id: 'leave group'
