--- a/app/views/groups/_payment_option.html.haml
+++ b/app/views/groups/_payment_option.html.haml
@@ -1,3 +1,3 @@
 %div{ class: "payment-option-container box-#{option_color}" }
 	= t('payment_details.people_limit_html', people: people)
-	= link_to t('payment_details.monthly_amount', dollars: dollars), "#", class: "flat-btn btn-#{option_color}"
+	= link_to t('payment_details.monthly_amount', dollars: dollars), "#", class: "btn btn-#{option_color}"
