--- a/app/views/groups/view_payment_details.html.haml
+++ b/app/views/groups/view_payment_details.html.haml
@@ -15,4 +15,4 @@
     #us-dollars= t("payment_details.prices_in_us_dollars")
     #footer
       = t('payment_details.footer')
-      #contact-us= t('payment_details.contact_us_html')
+      %div= t('payment_details.contact_us_html')
