--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -108,6 +108,7 @@ a.btn-icon:hover { color: $dark-grey; }
 .registrations.create,
 .pages.home,
 .pages.privacy,
+.pages.terms_of_service,
 .pages.purpose,
 .pages.how_it_works,
 .pages.about,
