add pricing page

--- a/app/views/group_requests/subscription.html.haml
+++ b/app/views/group_requests/subscription.html.haml
@@ -20,5 +20,8 @@
         %tr
           %td= t("group_request.subscription.table.quantity4")
           %td= t("group_request.subscription.table.price4_html")
+        %tr
+          %td= t("group_request.subscription.table.quantity5")
+          %td= t("group_request.subscription.table.price5_html")
       %p= t("group_request.subscription.table.description_html")
 
