--- a/app/views/groups/_options_dropdown.html.haml
+++ b/app/views/groups/_options_dropdown.html.haml
@@ -9,7 +9,7 @@
       %ul.dropdown-menu.pull-right
         - if can_edit
           %li= link_to t(:edit_group_settings), edit_group_path(group)
-        - if can? :view_payment_details, group and group.has_subscription_plan?
+        - if (can? :view_payment_details, group)
           %li= link_to t(:payment_details_link), view_payment_details_group_path
         - if can_leave
           - membership = current_user.group_membership(group)
