--- a/app/views/groups/view_payment_details.html.haml
+++ b/app/views/groups/view_payment_details.html.haml
@@ -2,17 +2,27 @@
   .span9
     - set_title @group.name, "", @group.parent
     = render '/groups/title', group: @group
+    %h1= t("payment_details.details")
+    %p= t("payment_details.current_plan_html", subscription_plan: get_subscription_plan(@group.subscription_plan))
+    %p= t("payment_details.people_in_group", people_in_group: @group.members.count)
+    %p= t("payment_details.payment_plan_contact_html")
 .row
-  .span5
-    %h1= t("payment_details.select_your_plan")
-    %p= t("payment_details.info")
-.row
-  .span9#payment-options
-    = render 'payment_option', option_color: 'lt-blue', people: 10, dollars: 30
-    = render 'payment_option', option_color: 'lime', people: 25, dollars: 50
-    = render 'payment_option', option_color: 'yellow', people: 50, dollars: 100
-    = render 'payment_option', option_color: 'orange', people: 100, dollars: 200
-    #us-dollars= t("payment_details.prices_in_us_dollars")
-    #footer
-      = t('payment_details.footer')
-      %div= t('payment_details.contact_us_html')
+  .span4
+    .info-box#organisation
+      %table
+        %h3= t("payment_details.subscription.table.title_html")
+        %tr
+          %td= t("payment_details.subscription.table.quantity1")
+          %td= t("payment_details.subscription.table.price1_html")
+        %tr
+          %td= t("payment_details.subscription.table.quantity2")
+          %td= t("payment_details.subscription.table.price2_html")
+        %tr
+          %td= t("payment_details.subscription.table.quantity3")
+          %td= t("payment_details.subscription.table.price3_html")
+        %tr
+          %td= t("payment_details.subscription.table.quantity4")
+          %td= t("payment_details.subscription.table.price4_html")
+        %tr
+          %td= t("payment_details.subscription.table.quantity5")
+          %td= t("payment_details.subscription.table.price5_html")
