--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -85,28 +85,68 @@ ul, ol, li {
 .box-yellow { background-color: #FCF7D7; }
 .box-orange { background-color: #FEEED5; }
 .btn-lt-blue {
-  background-image: linear-gradient(to bottom, #5BC0DE, #2F96B4);
-  background-image: -moz-linear-gradient(top, #5BC0DE, #2F96B4);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5BC0DE), to(#2F96B4));
-  &:hover { background-color: #2F96B4; }
+  background-color: hsl(190, 57%, 40%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4eb9ce", endColorstr="#2b8ca0");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#4eb9ce), to(#2b8ca0));
+  background-image: -moz-linear-gradient(top, #4eb9ce, #2b8ca0);
+  background-image: -ms-linear-gradient(top, #4eb9ce, #2b8ca0);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4eb9ce), color-stop(100%, #2b8ca0));
+  background-image: -webkit-linear-gradient(top, #4eb9ce, #2b8ca0);
+  background-image: -o-linear-gradient(top, #4eb9ce, #2b8ca0);
+  background-image: linear-gradient(#4eb9ce, #2b8ca0);
+  border-color: #2b8ca0 #2b8ca0 hsl(190, 57%, 36%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.26);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-lime {
-  background-image: linear-gradient(to bottom, #62C462, #51A351);
-  background-image: -moz-linear-gradient(top, #62C462, #51A351);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62C462), to(#51A351));
-  &:hover { background-color: #51A351; }
+  background-color: hsl(114, 46%, 40%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#65c25b", endColorstr="#409437");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#65c25b), to(#409437));
+  background-image: -moz-linear-gradient(top, #65c25b, #409437);
+  background-image: -ms-linear-gradient(top, #65c25b, #409437);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #65c25b), color-stop(100%, #409437));
+  background-image: -webkit-linear-gradient(top, #65c25b, #409437);
+  background-image: -o-linear-gradient(top, #65c25b, #409437);
+  background-image: linear-gradient(#65c25b, #409437);
+  border-color: #409437 #409437 hsl(114, 46%, 36%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.26);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-yellow {
-  background-image: linear-gradient(to bottom, #EEEE02, #DFD601);
-  background-image: -moz-linear-gradient(top, #EEEE02, #DFD601);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#EEEE02), to(#DFD601));
-  &:hover { background-color: #DFD601 }
+  background-color: hsl(49, 100%, 41%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fed623", endColorstr="#d1aa00");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#fed623), to(#d1aa00));
+  background-image: -moz-linear-gradient(top, #fed623, #d1aa00);
+  background-image: -ms-linear-gradient(top, #fed623, #d1aa00);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fed623), color-stop(100%, #d1aa00));
+  background-image: -webkit-linear-gradient(top, #fed623, #d1aa00);
+  background-image: -o-linear-gradient(top, #fed623, #d1aa00);
+  background-image: linear-gradient(#fed623, #d1aa00);
+  border-color: #d1aa00 #d1aa00 hsl(49, 100%, 37%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.26);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-orange {
-  background-image: linear-gradient(to bottom, #FBB450, #f89406);
-  background-image: -moz-linear-gradient(top, #FBB450, #f89406);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#FBB450), to(#f89406));
-  &:hover { background-color: #F89406; }
+  background-color: hsl(37, 100%, 41%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#feaa23", endColorstr="#d18000");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#feaa23), to(#d18000));
+  background-image: -moz-linear-gradient(top, #feaa23, #d18000);
+  background-image: -ms-linear-gradient(top, #feaa23, #d18000);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #feaa23), color-stop(100%, #d18000));
+  background-image: -webkit-linear-gradient(top, #feaa23, #d18000);
+  background-image: -o-linear-gradient(top, #feaa23, #d18000);
+  background-image: linear-gradient(#feaa23, #d18000);
+  border-color: #d18000 #d18000 hsl(37, 100%, 37%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.26);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-grey { color: $mid-grey; }
 
