add contribute page and donate tab

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -106,6 +106,7 @@ a.btn-icon:hover { color: $dark-grey; }
 .invitations.show,
 .sessions.new,
 .registrations.create,
+.pages.donate,
 .pages.home,
 .pages.privacy,
 .pages.purpose,
