add contribute page and donate tab
Conflicts:
	app/assets/stylesheets/frontpage.css
	config/routes.rb

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -110,6 +110,7 @@ a.btn-icon:hover { color: $dark-grey; }
 .invitations.show,
 .sessions.new,
 .registrations.create,
+.pages.donate,
 .pages.home,
 .pages.pricing,
 .pages.privacy,
