--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -300,3 +300,22 @@ a.btn-icon:hover { color: $dark-grey; }
     text-align: right;
   }
 }
+
+#donate-container { position: relative; }
+
+#donate-container:hover .donate-tab {
+  transform: translate(7px,0);
+    -webkit-transform: translate(7px,0);
+    -o-transform: translate(7px,0);
+    -moz-transform: translate(7px,0);
+}
+
+.donate-tab {
+  left: -11px;
+  position: fixed;
+  top: 60px;
+  transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+}
