change dollars to amount

--- a/app/views/groups/subscriptions/new.html.haml
+++ b/app/views/groups/subscriptions/new.html.haml
@@ -7,10 +7,10 @@
     %h1= t("payment_details.select_your_plan")
 .row
   .span9#payment-options
-    = render 'payment_option', option_color: 'lt-blue', people: 10, dollars: 30, group: @group
-    = render 'payment_option', option_color: 'lime', people: 25, dollars: 50, group: @group
-    = render 'payment_option', option_color: 'yellow', people: 50, dollars: 100, group: @group
-    = render 'payment_option', option_color: 'orange', people: 100, dollars: 200, group: @group
+    = render 'payment_option', option_color: 'lt-blue', people: 10, amount: 30, group: @group
+    = render 'payment_option', option_color: 'lime', people: 25, amount: 50, group: @group
+    = render 'payment_option', option_color: 'yellow', people: 50, amount: 100, group: @group
+    = render 'payment_option', option_color: 'orange', people: 100, amount: 200, group: @group
     #us-dollars= t("payment_details.prices_in_us_dollars")
   .span7
     #footer
