--- a/app/views/application/_footer_logged_in.html.haml
+++ b/app/views/application/_footer_logged_in.html.haml
@@ -7,7 +7,8 @@
           %b.caret
         %ul.dropdown-menu
           - Translation::LANGUAGES.each do |language|
-            %li= Translation.language_link(language)
+            - link_attrs = Translation.language_link_attributes(language)
+            %li= link_to link_attrs[:text], link_attrs[:href], title: link_attrs[:title]
 
       = link_to t(:translate, default: "help translate Loomio!"), 'https://www.loomio.org/discussions/4896'
 
