--- a/app/views/groups/subscriptions/_payment_option.html.haml
+++ b/app/views/groups/subscriptions/_payment_option.html.haml
@@ -1,3 +1,3 @@
 %div{ class: "payment-option-container box-#{option_color}" }
 	= t('payment_details.people_limit_html', people: people)
-	= link_to t('payment_details.monthly_amount', amount: amount), checkout_group_subscriptions_path(group, amount: amount), class: "btn btn-#{option_color}"
+	= link_to t('payment_details.monthly_amount', amount: amount), group_subscription_path(group, amount: amount), method: :post, class: "btn btn-#{option_color}"
