Finishing paypal touches
Tell user when they'll be billed
Move text into I18N
pull ENDPOINT_URL into ENV variable
change gateway url into ENV varibable

--- a/app/views/groups/subscriptions/_payment_option.html.haml
+++ b/app/views/groups/subscriptions/_payment_option.html.haml
@@ -1,3 +1,3 @@
 %div{ class: "payment-option-container box-#{option_color}" }
-	= t('payment_details.people_limit_html', people: people)
-	= link_to t('payment_details.monthly_amount', amount: amount), group_subscription_path(group, amount: amount), method: :post, class: "btn btn-#{option_color}"
+	= t('subscriptions.people_limit_html', people: people)
+	= link_to t('subscriptions.monthly_amount', amount: amount), group_subscription_path(group, amount: amount), method: :post, class: "btn btn-#{option_color}"
