--- a/app/views/groups/subscriptions/payment_failed.html.haml
+++ b/app/views/groups/subscriptions/payment_failed.html.haml
@@ -1,5 +1,4 @@
 %br
-%h1 Oops! Looks like something went wrong.
+%h1= t(:'subscriptions.payment_failed_title')
 
-%p For some reason your payment couldn't be processed.
-%p Please send us an email at <a href="mailto:accounts@loomio.org">accounts@loomio.org</a> and we'll help you out.
+= t(:'subscriptions.payment_failed_body_html')
