make in-app pages render in-app

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -107,11 +107,13 @@ a.btn-icon:hover { color: $dark-grey; }
 .sessions.new,
 .registrations.create,
 .pages.home,
+.pages.about,
+.pages.blog,
 .pages.privacy,
+.pages.pricing,
 .pages.terms_of_service,
 .pages.purpose,
 .pages.how_it_works,
-.pages.about,
 .pages.about_us, .woc.index, .we_the_people.index {
   color: black;
 
