--- a/app/views/layouts/pages.html.haml
+++ b/app/views/layouts/pages.html.haml
@@ -23,14 +23,14 @@
             =link_to image_tag("logo-426px-mauve-matte.png"), "/"
             %h2 collaborative decision-making
         .frontpage-nav
-          =link_to('Purpose', '/about#purpose')
+          =link_to('Purpose', '/pages/about#purpose')
           %span{style: 'padding-left: 3px; padding-right: 3px'}
             &middot;
 
-          =link_to('How it works', '/about#how-it-works')
+          =link_to('How it works', '/pages/about#how-it-works')
           %span{style: 'padding-left: 3px; padding-right: 3px'}
             &middot;
-          =link_to('About us', '/about#about-us')
+          =link_to('About us', '/pages/about#about-us')
     = yield
     = render 'footer_logged_out'
 
