--- a/app/views/pages/blog.html.haml
+++ b/app/views/pages/blog.html.haml
@@ -1,11 +1,1 @@
-= render "marketing_header"
-
-.container
-  %section
-    .inner-container
-      .row-fluid
-        .span2 &nbsp;
-        .span8
-          %h2 Blog is temporarily down
-          %p Our blog is currently disabled. Sorry, we'll have it back up again soon!
-          %p= link_to "Read more about Loomio", "/"
+= render 'blog'
