--- a/app/views/application/_footer_logged_out.html.haml
+++ b/app/views/application/_footer_logged_out.html.haml
@@ -1,7 +1,7 @@
 .pages-links
-  = link_to t('footer.terms'), '#'
-  = link_to t('footer.privacy'), privacy_path
-  = link_to t('footer.pricing'), '#'
-  = link_to t('footer.contact'), contact_path
-  = link_to t('footer.about'), about_path
-  = link_to t('footer.blog'), '#'  #blog_path, target: 'blank'
+  = link_to t('footer.terms'), terms_of_service_pages_path
+  = link_to t('footer.privacy'), privacy_pages_path
+  = link_to t('footer.pricing'), pricing_pages_path
+  = link_to t('footer.contact'), pages_contact_path
+  = link_to t('footer.about'), about_pages_path
+  = link_to t('footer.blog'), blog_pages_path
