--- a/app/views/groups/subscriptions/new.html.haml
+++ b/app/views/groups/subscriptions/new.html.haml
@@ -5,7 +5,10 @@
 .row
   .span5
     %h1= t("subscriptions.select_your_plan")
+
 .row
+  .span12#please-wait.hidden
+    = t(:'subscriptions.redirecting_please_wait')
   .span9#payment-options
     = render 'payment_option', option_color: 'lt-blue', people: 10, amount: 30, group: @group
     = render 'payment_option', option_color: 'lime', people: 25, amount: 50, group: @group
