--- a/app/views/pages/blog.html.haml
+++ b/app/views/pages/blog.html.haml
@@ -1,1 +1,9 @@
-= render 'blog'
+.container
+  %section
+    .inner-container
+      .row-fluid.pages-information
+        .span2 &nbsp;
+        .span8
+          %h2 Blog is temporarily down
+          %p Our blog is currently disabled. Sorry, we'll have it back up again soon!
+          %p= link_to "Read more about Loomio", "/"
