--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -121,7 +121,6 @@ a.btn-icon:hover { color: $dark-grey; }
   color: black;
 
   .frontpage-nav {
-    text-transform:lowercase;
     margin-top: 15px;
     text-align: center;
     font-size: 130%;
@@ -144,7 +143,7 @@ a.btn-icon:hover { color: $dark-grey; }
 
   .container{
     &#top {
-      .inner-container { padding: 20px 0px 34px; }
+      .inner-container { padding: 0px 0px 26px 0px; }
       h2 { color: rgba(0,0,0,.7); }
     }
     .subhead{
@@ -168,7 +167,9 @@ a.btn-icon:hover { color: $dark-grey; }
       margin-bottom: 18px;
     }
     .buffer{
+      margin-top: 10px;
       margin-bottom: 18px;
+      font-size: 32px;
     }
     #woc-index .buffer{
       margin-bottom: 36px;
@@ -176,6 +177,7 @@ a.btn-icon:hover { color: $dark-grey; }
     .no-bottom-margin{
       margin-bottom: 0px;
     }
+    .homevideo { text-align:right; }
   }
   .subhead h1, .head h1{
     font-size: 50px;
@@ -276,12 +278,17 @@ a.btn-icon:hover { color: $dark-grey; }
 
 .sessions.new section { margin-top: 0; }
 
+body.pages { margin-bottom: 34px; }
+
 body.pages.home {
   #button-container {
     margin-top: 24px;
-    text-align: center;
     a { width: 200px; }
   }
+  hr { margin: 30px 0;  }
+  .homesection {
+    text-align: center;
+    h2 { margin-bottom: 20px; }}
 }
 
 body.pages.pricing {
