--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -150,6 +150,10 @@ ul, ol, li {
 }
 .btn-grey { color: $mid-grey; }
 
+#start-group-btn { 
+  font-size: 24px;
+  padding: 15px;  }
+
 .cf {
   zoom: 1;
   &:after { clear:both; }
