--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,11 +3,18 @@
     .inner-container
       .row-fluid
         .span6
-          %h2.buffer Creating a world where it’s easy for anyone to participate in decisions that affect them.
+          %h2.buffer Loomio is a user-friendly tool for group decision-making.
 
-          %p Loomio is a user-friendly tool that makes it easy for groups to make good decisions quickly.
+          %p Creating a world where it’s easy for anyone to participate in decisions that affect them.
+
+          %p
+            %strong Want to try it out?
 
           #button-container
-            = link_to "Start a group", selection_group_requests_path, class: 'btn btn-success btn-large', id: 'start-group-btn'
-        .span6
-          <iframe class="no-bottom-margin" src="https://player.vimeo.com/video/51331688?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ff9933" width="426" height="264" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            = link_to "Start a group!", selection_group_requests_path, class: 'btn btn-success btn-large', id: 'start-group-btn'
+        .span6.homevideo
+          <iframe class="no-bottom-margin" src="https://player.vimeo.com/video/52025402?title=0&amp;byline=0&amp;portrait=0&amp;badge=0" width="383" height="287" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        .row-fluid.homesection
+          %hr
+          %h2 How Loomio works
+          =image_tag("how-loomio-works.png")
