--- a/app/views/application/_footer_logged_in.html.haml
+++ b/app/views/application/_footer_logged_in.html.haml
@@ -1,7 +1,7 @@
 .footer.container.clearfix
   - if user_signed_in?
     .left
-      .dropdown
+      .dropup
         %a.dropdown-toggle{'data-toggle' => 'dropdown', :href => '#'}
           = Translation.language(current_user.language_preference)
           %b.caret
@@ -13,9 +13,9 @@
       = link_to t(:translate, default: "help translate Loomio!"), 'https://www.loomio.org/discussions/4896'
 
   .footer-links
-    = link_to t('footer.terms'), terms_of_service_path
-    = link_to t('footer.privacy'), privacy_path
-    = link_to t('footer.pricing'), pricing_path
-    = link_to t('footer.contact'), contact_path
-    = link_to t('footer.about'), about_path
-    = link_to t('footer.blog'), blog_path, target: 'blank'
+    = link_to t('footer.terms'), terms_of_service_path, target: 'blank'
+    = link_to t('footer.privacy'), privacy_path, target: 'blank'
+    = link_to t('footer.pricing'), pricing_path, target: 'blank'
+    = link_to t('footer.contact'), contact_path, target: 'blank'
+    = link_to t('footer.about'), about_path, target: 'blank'
+    / = link_to t('footer.blog'), blog_path, target: 'blank'
