Swap in sparklines version of pie for dashboards

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -8,4 +8,9 @@ body.dashboard {
       .sub-group .group-link-name { padding-left: 20px; }
     }
   }
+  .icon .motion-sparkline {
+  	position: relative;
+  	top: 10px;
+  	left: 7px;
+  }
 }
