--- a/app/views/discussions/_discussion_preview.html.haml
+++ b/app/views/discussions/_discussion_preview.html.haml
@@ -21,29 +21,13 @@
           .latest-comment-time= "#{t('ago', :quantity_of_time => time_ago_in_words(discussion.last_comment_at))}"
     - if discussion.current_motion
       - motion_activity = motion_activity_count_for(discussion.current_motion, current_user)
-      .pie{:id => "graph_#{discussion.current_motion.id}"}
+      / .pie{:id => "graph_#{discussion.current_motion.id}"}
+      .icon
+        -values = discussion.current_motion.vote_counts.values
+        .motion-sparkline
+          -if values.sum == 0
+            0,0,0,0,1
+          -else
+            =values.join(',')
     - else
       .large-icon.pie-icon.activity-icon
-
-- if discussion.current_motion
-  :coffeescript
-    $ ->
-      # Display vote graph
-      make_the_graph = ->
-        @pie_graph_view = new Loomio.Views.Utils.GraphView
-          el: '.pie'
-          id_string: "graph_#{discussion.current_motion.id}"
-          legend: false
-          data: #{discussion.current_motion.votes_for_graph.to_json.html_safe}
-          type: 'pie'
-          tooltip_selector: '#tooltip'
-          diameter: 25
-          padding: 1
-          gap: 1
-          shadow: 0
-
-      # IE8 FIX - for some reason we have to load the graph after everything else.
-      # Otherwise, the graph doesn't display in IE8.
-      #
-      # Ideally, we'd like to be able to delete this line:
-      $(window).load(make_the_graph)
