Swap in sparklines version of pie for dashboards

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -9,8 +9,8 @@ body.dashboard {
     }
   }
   .icon .motion-sparkline {
-  	position: relative;
-  	top: 10px;
-  	left: 7px;
+	float: right;
+	margin-top: 10px;
+	margin-right: 9px;
   }
 }
