--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -7,9 +7,9 @@ body.groups {
     .discussion-preview .discussion-title { margin-top: 7px; }
     .discussion-preview.showing-group .discussion-title { margin-top: 0; }
     .icon .motion-sparkline {
-      position: relative;
-      top: 10px;
-      left: 7px;
+      float: right;
+      margin-top: 10px;
+      margin-right: 9px;
     }
     #button-container { margin-top: 5px; }
     #group-description-panel {
