--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -367,4 +367,13 @@ body.pages.terms_of_service {
   }
 }
 
-
+.invitations.show, .registrations.create {
+  .alert { margin: 10px 0; }
+  .terms-of-service-text {
+    font-size: 1em;
+    margin: 0 0 8px 2px;
+    a { font-size: 1em; }
+  }
+  select { width: 394px; }
+  input.btn { margin-bottom: 15px; }
+}
